feat(blank-flow): changes required for the blank mission flow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-dependency-editor [githubUrl]="githubUrl" [boosterInfo]="boosterInfo" [githubRef]="githubRef"></app-dependency-editor>
+<app-dependency-editor [blankResponse]="blankResponse" [githubUrl]="githubUrl" [boosterInfo]="boosterInfo" [githubRef]="githubRef"></app-dependency-editor>
